--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "taskrunner",
   "version": "1.0.0",
+  "description": "",
   "main": "index.html",
   "scripts": {
     "init-project": "npm install && npm-run-all init:*",
@@ -18,18 +19,528 @@
     "watch:browsersync": "browser-sync start --server --files \"css/*.css\" \"*.html\"",
     "watch:sassprefixer": "onchange sass/*.scss -- npm run build-dev"
   },
+  "dependencies": {
+    "abbrev": "^1.1.1",
+    "accepts": "^1.3.7",
+    "acorn": "^7.4.1",
+    "acorn-jsx": "^5.3.1",
+    "acorn-walk": "^7.2.0",
+    "after": "^0.8.2",
+    "ajv": "^6.12.6",
+    "amdefine": "^1.0.1",
+    "ansi-escapes": "^4.3.1",
+    "ansi-regex": "^5.0.0",
+    "ansi-styles": "^3.2.1",
+    "anymatch": "^3.1.1",
+    "aproba": "^1.2.0",
+    "are-we-there-yet": "^1.1.5",
+    "argparse": "^1.0.10",
+    "arr-diff": "^4.0.0",
+    "arr-flatten": "^1.1.0",
+    "arr-union": "^3.1.0",
+    "array-filter": "^1.0.0",
+    "array-find-index": "^1.0.2",
+    "array-union": "^2.1.0",
+    "array-unique": "^0.3.2",
+    "arraybuffer.slice": "^0.0.7",
+    "arrify": "^1.0.1",
+    "asn1": "^0.2.4",
+    "assert-plus": "^1.0.0",
+    "assign-symbols": "^1.0.0",
+    "astral-regex": "^1.0.0",
+    "async-each": "^1.0.3",
+    "async-each-series": "^0.1.1",
+    "async-foreach": "^0.1.3",
+    "asynckit": "^0.4.0",
+    "at-least-node": "^1.0.0",
+    "atob": "^2.1.2",
+    "autoprefixer": "^10.2.4",
+    "available-typed-arrays": "^1.0.2",
+    "aws-sign2": "^0.7.0",
+    "aws4": "^1.11.0",
+    "axios": "^0.21.1",
+    "backo2": "^1.0.2",
+    "balanced-match": "^1.0.0",
+    "base": "^0.11.2",
+    "base64-arraybuffer": "^0.1.4",
+    "base64id": "^2.0.0",
+    "batch": "^0.6.1",
+    "bcrypt-pbkdf": "^1.0.2",
+    "binary-extensions": "^2.2.0",
+    "blob": "^0.0.5",
+    "block-stream": "^0.0.9",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
+    "browser-sync": "^2.26.14",
+    "browser-sync-client": "^2.26.14",
+    "browser-sync-ui": "^2.26.14",
+    "browserslist": "^4.16.3",
+    "bs-recipes": "^1.3.4",
+    "bs-snippet-injector": "^2.0.1",
+    "bytes": "^3.1.0",
+    "cache-base": "^1.0.1",
+    "call-bind": "^1.0.2",
+    "callsites": "^3.1.0",
+    "camelcase": "^2.1.1",
+    "camelcase-keys": "^2.1.0",
+    "caniuse-lite": "^1.0.30001196",
+    "caseless": "^0.12.0",
+    "chalk": "^2.4.2",
+    "chardet": "^0.7.0",
+    "chokidar": "^3.5.1",
+    "class-utils": "^0.3.6",
+    "cli-cursor": "^3.1.0",
+    "cli-width": "^3.0.0",
+    "cliui": "^5.0.0",
+    "code-error-fragment": "^0.0.230",
+    "code-point-at": "^1.1.0",
+    "collection-visit": "^1.0.0",
+    "color-convert": "^1.9.3",
+    "color-name": "^1.1.3",
+    "colorette": "^1.2.2",
+    "combined-stream": "^1.0.8",
+    "commander": "^2.20.3",
+    "component-bind": "^1.0.0",
+    "component-emitter": "^1.3.0",
+    "component-inherit": "^0.0.3",
+    "concat-map": "^0.0.1",
+    "connect": "^3.6.6",
+    "connect-history-api-fallback": "^1.6.0",
+    "console-control-strings": "^1.1.0",
+    "cookie": "^0.4.1",
+    "copy-descriptor": "^0.1.1",
+    "core-util-is": "^1.0.2",
+    "cosmiconfig": "^7.0.0",
+    "cross-spawn": "^6.0.5",
+    "currently-unhandled": "^0.4.1",
+    "dashdash": "^1.14.1",
+    "debug": "^2.6.9",
+    "decamelize": "^1.2.0",
+    "decode-uri-component": "^0.2.0",
+    "deep-equal": "^2.0.5",
+    "deep-is": "^0.1.3",
+    "deepmerge": "^4.2.2",
+    "define-properties": "^1.1.3",
+    "define-property": "^0.2.5",
+    "delayed-stream": "^1.0.0",
+    "delegates": "^1.0.0",
+    "depd": "^1.1.2",
+    "dependency-graph": "^0.9.0",
+    "destroy": "^1.0.4",
+    "dev-ip": "^1.0.1",
+    "dir-glob": "^3.0.1",
+    "dlv": "^1.1.3",
+    "doctrine": "^3.0.0",
+    "easy-extender": "^2.3.4",
+    "eazy-logger": "^3.1.0",
+    "ecc-jsbn": "^0.1.2",
+    "ee-first": "^1.1.1",
+    "electron-to-chromium": "^1.3.680",
+    "emoji-regex": "^7.0.3",
+    "encodeurl": "^1.0.2",
+    "engine.io": "^3.5.0",
+    "engine.io-client": "^3.5.1",
+    "engine.io-parser": "^2.2.1",
+    "error-ex": "^1.3.2",
+    "es-abstract": "^1.18.0",
+    "es-get-iterator": "^1.1.2",
+    "es-to-primitive": "^1.2.1",
+    "escalade": "^3.1.1",
+    "escape-html": "^1.0.3",
+    "escape-string-regexp": "^1.0.5",
+    "eslint": "^6.8.0",
+    "eslint-scope": "^5.1.1",
+    "eslint-utils": "^1.4.3",
+    "eslint-visitor-keys": "^1.3.0",
+    "espree": "^6.2.1",
+    "esprima": "^4.0.1",
+    "esquery": "^1.4.0",
+    "esrecurse": "^4.3.0",
+    "estraverse": "^4.3.0",
+    "esutils": "^2.0.3",
+    "etag": "^1.8.1",
+    "eventemitter3": "^4.0.7",
+    "expand-brackets": "^2.1.4",
+    "extend": "^3.0.2",
+    "extend-shallow": "^2.0.1",
+    "external-editor": "^3.1.0",
+    "extglob": "^2.0.4",
+    "extsprintf": "^1.3.0",
+    "fast-deep-equal": "^3.1.3",
+    "fast-glob": "^3.2.5",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fast-levenshtein": "^2.0.6",
+    "fastq": "^1.11.0",
+    "figures": "^3.2.0",
+    "file-entry-cache": "^5.0.1",
+    "fill-range": "^7.0.1",
+    "finalhandler": "^1.1.0",
+    "find-up": "^1.1.2",
+    "flat-cache": "^2.0.1",
+    "flatted": "^2.0.2",
+    "follow-redirects": "^1.13.3",
+    "for-in": "^1.0.2",
+    "foreach": "^2.0.5",
+    "forever-agent": "^0.6.1",
+    "form-data": "^2.3.3",
+    "fraction.js": "^4.0.13",
+    "fragment-cache": "^0.2.1",
+    "fresh": "^0.5.2",
+    "fs-extra": "^9.1.0",
+    "fs.realpath": "^1.0.0",
+    "fstream": "^1.0.12",
+    "function-bind": "^1.1.1",
+    "functional-red-black-tree": "^1.0.1",
+    "gauge": "^2.7.4",
+    "gaze": "^1.1.3",
+    "get-caller-file": "^2.0.5",
+    "get-intrinsic": "^1.1.1",
+    "get-stdin": "^4.0.1",
+    "get-value": "^2.0.6",
+    "getpass": "^0.1.7",
+    "glob": "^7.1.6",
+    "glob-parent": "^5.1.1",
+    "globals": "^12.4.0",
+    "globby": "^11.0.2",
+    "globule": "^1.3.2",
+    "graceful-fs": "^4.2.6",
+    "grapheme-splitter": "^1.0.4",
+    "har-schema": "^2.0.0",
+    "har-validator": "^5.1.5",
+    "has": "^1.0.3",
+    "has-ansi": "^2.0.0",
+    "has-bigints": "^1.0.1",
+    "has-binary2": "^1.0.3",
+    "has-cors": "^1.1.0",
+    "has-flag": "^3.0.0",
+    "has-symbols": "^1.0.2",
+    "has-unicode": "^2.0.1",
+    "has-value": "^1.0.0",
+    "has-values": "^1.0.0",
+    "hosted-git-info": "^2.8.8",
+    "html-validate": "^2.23.1",
+    "http-errors": "^1.7.3",
+    "http-proxy": "^1.18.1",
+    "http-signature": "^1.2.0",
+    "iconv-lite": "^0.4.24",
+    "ignore": "^5.1.8",
+    "immutable": "^3.8.2",
+    "import-cwd": "^3.0.0",
+    "import-fresh": "^3.3.0",
+    "import-from": "^3.0.0",
+    "imurmurhash": "^0.1.4",
+    "in-publish": "^2.0.1",
+    "indent-string": "^2.1.0",
+    "indexof": "^0.0.1",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "inquirer": "^7.3.3",
+    "is-accessor-descriptor": "^0.1.6",
+    "is-arguments": "^1.1.0",
+    "is-arrayish": "^0.2.1",
+    "is-bigint": "^1.0.1",
+    "is-binary-path": "^2.1.0",
+    "is-boolean-object": "^1.1.0",
+    "is-buffer": "^1.1.6",
+    "is-callable": "^1.2.3",
+    "is-core-module": "^2.2.0",
+    "is-data-descriptor": "^0.1.4",
+    "is-date-object": "^1.0.2",
+    "is-descriptor": "^0.1.6",
+    "is-extendable": "^0.1.1",
+    "is-extglob": "^2.1.1",
+    "is-finite": "^1.1.0",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-glob": "^4.0.1",
+    "is-map": "^2.0.2",
+    "is-negative-zero": "^2.0.1",
+    "is-number": "^7.0.0",
+    "is-number-like": "^1.0.8",
+    "is-number-object": "^1.0.4",
+    "is-plain-object": "^2.0.4",
+    "is-regex": "^1.1.2",
+    "is-set": "^2.0.2",
+    "is-string": "^1.0.5",
+    "is-symbol": "^1.0.3",
+    "is-typed-array": "^1.1.5",
+    "is-typedarray": "^1.0.0",
+    "is-utf8": "^0.2.1",
+    "is-weakmap": "^2.0.1",
+    "is-weakset": "^2.0.1",
+    "is-windows": "^1.0.2",
+    "is-wsl": "^1.1.0",
+    "isarray": "^2.0.5",
+    "isexe": "^2.0.0",
+    "isobject": "^3.0.1",
+    "isstream": "^0.1.2",
+    "js-base64": "^2.6.4",
+    "js-tokens": "^4.0.0",
+    "jsbn": "^0.1.1",
+    "json-merge-patch": "^1.0.1",
+    "json-parse-better-errors": "^1.0.2",
+    "json-parse-even-better-errors": "^2.3.1",
+    "json-schema": "^0.2.3",
+    "json-schema-traverse": "^0.4.1",
+    "json-stable-stringify-without-jsonify": "^1.0.1",
+    "json-stringify-safe": "^5.0.1",
+    "json-to-ast": "^2.1.0",
+    "jsonfile": "^6.1.0",
+    "jsonpointer": "^4.1.0",
+    "jsprim": "^1.4.1",
+    "kind-of": "^4.0.0",
+    "leven": "^3.1.0",
+    "levn": "^0.3.0",
+    "limiter": "^1.1.5",
+    "lines-and-columns": "^1.1.6",
+    "load-json-file": "^4.0.0",
+    "localtunnel": "^2.0.1",
+    "locate-path": "^3.0.0",
+    "lodash": "^4.17.21",
+    "lodash.difference": "^4.5.0",
+    "lodash.forown": "^4.4.0",
+    "lodash.get": "^4.4.2",
+    "lodash.groupby": "^4.6.0",
+    "lodash.isfinite": "^3.3.2",
+    "lodash.sortby": "^4.7.0",
+    "loud-rejection": "^1.6.0",
+    "lru-cache": "^4.1.5",
+    "map-cache": "^0.2.2",
+    "map-obj": "^1.0.1",
+    "map-visit": "^1.0.0",
+    "memorystream": "^0.3.1",
+    "meow": "^3.7.0",
+    "merge2": "^1.4.1",
+    "micromatch": "^4.0.2",
+    "mime": "^1.4.1",
+    "mime-db": "^1.46.0",
+    "mime-types": "^2.1.29",
+    "mimic-fn": "^2.1.0",
+    "minimatch": "^3.0.4",
+    "minimist": "^1.2.5",
+    "mitt": "^1.2.0",
+    "mixin-deep": "^1.3.2",
+    "mkdirp": "^0.5.5",
+    "ms": "^2.1.3",
+    "mute-stream": "^0.0.8",
+    "nan": "^2.14.2",
+    "nanoid": "^3.1.20",
+    "nanomatch": "^1.2.13",
+    "natural-compare": "^1.4.0",
+    "negotiator": "^0.6.2",
+    "nice-try": "^1.0.5",
+    "node-gyp": "^3.8.0",
+    "node-releases": "^1.1.71",
+    "node-sass": "^4.14.1",
+    "nopt": "^3.0.6",
+    "normalize-package-data": "^2.5.0",
+    "normalize-path": "^3.0.0",
+    "normalize-range": "^0.1.2",
+    "npm-run-all": "^4.1.5",
+    "npmlog": "^4.1.2",
+    "number-is-nan": "^1.0.1",
+    "oauth-sign": "^0.9.0",
+    "object-assign": "^4.1.1",
+    "object-copy": "^0.1.0",
+    "object-inspect": "^1.9.0",
+    "object-is": "^1.1.5",
+    "object-keys": "^1.1.1",
+    "object-visit": "^1.0.1",
+    "object.assign": "^4.1.2",
+    "object.pick": "^1.3.0",
+    "on-finished": "^2.3.0",
+    "once": "^1.4.0",
+    "onchange": "^5.2.0",
+    "onetime": "^5.1.2",
+    "openurl": "^1.1.1",
+    "opn": "^5.3.0",
+    "optionator": "^0.8.3",
+    "os-homedir": "^1.0.2",
+    "os-tmpdir": "^1.0.2",
+    "osenv": "^0.1.5",
+    "p-limit": "^2.3.0",
+    "p-locate": "^3.0.0",
+    "p-try": "^2.2.0",
+    "parent-module": "^1.0.1",
+    "parse-json": "^4.0.0",
+    "parseqs": "^0.0.6",
+    "parseuri": "^0.0.6",
+    "parseurl": "^1.3.3",
+    "pascalcase": "^0.1.1",
+    "path-dirname": "^1.0.2",
+    "path-exists": "^2.1.0",
+    "path-is-absolute": "^1.0.1",
+    "path-key": "^2.0.1",
+    "path-parse": "^1.0.6",
+    "path-type": "^3.0.0",
+    "performance-now": "^2.1.0",
+    "picomatch": "^2.2.2",
+    "pidtree": "^0.3.1",
+    "pify": "^3.0.0",
+    "pinkie": "^2.0.4",
+    "pinkie-promise": "^2.0.1",
+    "portscanner": "^2.1.1",
+    "posix-character-classes": "^0.1.1",
+    "postcss": "^8.2.6",
+    "postcss-cli": "^8.3.1",
+    "postcss-load-config": "^3.0.1",
+    "postcss-reporter": "^7.0.2",
+    "postcss-value-parser": "^4.1.0",
+    "prelude-ls": "^1.1.2",
+    "pretty-hrtime": "^1.0.3",
+    "process-nextick-args": "^2.0.1",
+    "progress": "^2.0.3",
+    "pseudomap": "^1.0.2",
+    "psl": "^1.8.0",
+    "punycode": "^2.1.1",
+    "qs": "^6.2.3",
+    "queue-microtask": "^1.2.2",
+    "range-parser": "^1.2.1",
+    "raw-body": "^2.4.1",
+    "read-cache": "^1.0.0",
+    "read-pkg": "^3.0.0",
+    "read-pkg-up": "^1.0.1",
+    "readable-stream": "^2.3.7",
+    "readdirp": "^3.5.0",
+    "redent": "^1.0.0",
+    "regex-not": "^1.0.2",
+    "regexp.prototype.flags": "^1.3.1",
+    "regexpp": "^2.0.1",
+    "remove-trailing-separator": "^1.1.0",
+    "repeat-element": "^1.1.3",
+    "repeat-string": "^1.6.1",
+    "repeating": "^2.0.1",
+    "request": "^2.88.2",
+    "require-directory": "^2.1.1",
+    "require-main-filename": "^2.0.0",
+    "requires-port": "^1.0.0",
+    "resolve": "^1.20.0",
+    "resolve-from": "^4.0.0",
+    "resolve-url": "^0.2.1",
+    "resp-modifier": "^6.0.2",
+    "restore-cursor": "^3.1.0",
+    "ret": "^0.1.15",
+    "reusify": "^1.0.4",
+    "rimraf": "^2.6.3",
+    "run-async": "^2.4.1",
+    "run-parallel": "^1.2.0",
+    "rx": "^4.1.0",
+    "rxjs": "^5.5.12",
+    "safe-buffer": "^5.1.2",
+    "safe-regex": "^1.1.0",
+    "safer-buffer": "^2.1.2",
+    "sass-graph": "^2.2.5",
+    "scss-tokenizer": "^0.2.3",
+    "semver": "^5.7.1",
+    "send": "^0.16.2",
+    "serve-index": "^1.9.1",
+    "serve-static": "^1.13.2",
+    "server-destroy": "^1.0.1",
+    "set-blocking": "^2.0.0",
+    "set-value": "^2.0.1",
+    "setprototypeof": "^1.1.1",
+    "shebang-command": "^1.2.0",
+    "shebang-regex": "^1.0.0",
+    "shell-quote": "^1.7.2",
+    "side-channel": "^1.0.4",
+    "signal-exit": "^3.0.3",
+    "slash": "^3.0.0",
+    "slice-ansi": "^2.1.0",
+    "snapdragon": "^0.8.2",
+    "snapdragon-node": "^2.1.1",
+    "snapdragon-util": "^3.0.1",
+    "socket.io": "^2.4.0",
+    "socket.io-adapter": "^1.1.2",
+    "socket.io-client": "^2.4.0",
+    "socket.io-parser": "^3.4.1",
+    "source-map": "^0.4.4",
+    "source-map-resolve": "^0.5.3",
+    "source-map-url": "^0.4.1",
+    "spdx-correct": "^3.1.1",
+    "spdx-exceptions": "^2.3.0",
+    "spdx-expression-parse": "^3.0.1",
+    "spdx-license-ids": "^3.0.7",
+    "split-string": "^3.1.0",
+    "sprintf-js": "^1.0.3",
+    "sshpk": "^1.16.1",
+    "static-extend": "^0.1.2",
+    "statuses": "^1.3.1",
+    "stdout-stream": "^1.4.1",
+    "stream-throttle": "^0.1.3",
+    "string_decoder": "^1.1.1",
+    "string-width": "^4.2.2",
+    "string.prototype.padend": "^3.1.2",
+    "string.prototype.trimend": "^1.0.4",
+    "string.prototype.trimstart": "^1.0.4",
+    "strip-ansi": "^6.0.0",
+    "strip-bom": "^3.0.0",
+    "strip-indent": "^1.0.1",
+    "strip-json-comments": "^3.1.1",
+    "supports-color": "^5.5.0",
+    "symbol-observable": "^1.0.1",
+    "table": "^5.4.6",
+    "tar": "^2.2.2",
+    "text-table": "^0.2.0",
+    "tfunk": "^4.0.0",
+    "through": "^2.3.8",
+    "tmp": "^0.0.33",
+    "to-array": "^0.1.4",
+    "to-object-path": "^0.3.0",
+    "to-regex": "^3.0.2",
+    "to-regex-range": "^5.0.1",
+    "toidentifier": "^1.0.0",
+    "tough-cookie": "^2.5.0",
+    "tree-kill": "^1.2.2",
+    "trim-newlines": "^1.0.0",
+    "true-case-path": "^1.0.3",
+    "tslib": "^1.14.1",
+    "tunnel-agent": "^0.6.0",
+    "tweetnacl": "^0.14.5",
+    "type-check": "^0.3.2",
+    "type-fest": "^0.8.1",
+    "ua-parser-js": "^0.7.24",
+    "unbox-primitive": "^1.0.0",
+    "union-value": "^1.0.1",
+    "universalify": "^2.0.0",
+    "unpipe": "^1.0.0",
+    "unset-value": "^1.0.0",
+    "upath": "^1.2.0",
+    "uri-js": "^4.4.1",
+    "urix": "^0.1.0",
+    "use": "^3.1.1",
+    "util-deprecate": "^1.0.2",
+    "utils-merge": "^1.0.1",
+    "uuid": "^3.4.0",
+    "v8-compile-cache": "^2.2.0",
+    "validate-npm-package-license": "^3.0.4",
+    "verror": "^1.10.0",
+    "which": "^1.3.1",
+    "which-boxed-primitive": "^1.0.2",
+    "which-collection": "^1.0.1",
+    "which-module": "^2.0.0",
+    "which-typed-array": "^1.1.4",
+    "wide-align": "^1.1.3",
+    "word-wrap": "^1.2.3",
+    "wrap-ansi": "^5.1.0",
+    "wrappy": "^1.0.2",
+    "write": "^1.0.3",
+    "ws": "^7.4.3",
+    "xmlhttprequest-ssl": "^1.5.5",
+    "y18n": "^4.0.1",
+    "yallist": "^2.1.2",
+    "yaml": "^1.10.0",
+    "yargs": "^13.3.2",
+    "yargs-parser": "^13.1.2",
+    "yeast": "^0.1.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Wiktor-prog/Git-4.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "autoprefixer": "^10.2.4",
-    "browser-sync": "^2.26.3",
-    "html-validate": "^2.8.0",
-    "mkdirp": "^0.5.1",
-    "node-sass": "^4.11.0",
-    "npm-run-all": "^4.1.5",
-    "onchange": "^5.2.0",
-    "postcss": "^8.2.6",
-    "postcss-cli": "^8.3.1"
-  }
+  "bugs": {
+    "url": "https://github.com/Wiktor-prog/Git-4/issues"
+  },
+  "homepage": "https://github.com/Wiktor-prog/Git-4#readme"
 }
