--- a/package.json
+++ b/package.json
@@ -540,7 +540,7 @@
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Wiktor-prog/Git-4/issues"
+    "url": "https://github.com/Wiktor-prog/JavaScript-prework.git"
   },
-  "homepage": "https://github.com/Wiktor-prog/Git-4#readme"
+  "homepage": "https://github.com/Wiktor-prog/JavaScript-prework"
 }
